--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@ body, html {
       <div class="w3-container">
 
 
-      <img src=" https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgbXDrZzCGOiWF4TKE-WDDum6Gq1VxVaQEOSIYd9k0g4YNMlKYBXrUNGskGs9ZzUbLTRoqDGNgG6o4kIS427MKOZkQHZT5N_l6zwd1Bu8lQgFaxySYiYgh_OPvqUetVt4AYVLLz6Ws5Q0CpKsXi1d3L2rxh_TK8SLENbXxPyq8KQg4s6c34UcF_kyGpsIo/s1200/3I.PNG  " alt="New York" style="width:100%" class="w3-hover-opacity">
+     <!--  <img src=" https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgbXDrZzCGOiWF4TKE-WDDum6Gq1VxVaQEOSIYd9k0g4YNMlKYBXrUNGskGs9ZzUbLTRoqDGNgG6o4kIS427MKOZkQHZT5N_l6zwd1Bu8lQgFaxySYiYgh_OPvqUetVt4AYVLLz6Ws5Q0CpKsXi1d3L2rxh_TK8SLENbXxPyq8KQg4s6c34UcF_kyGpsIo/s1200/3I.PNG  " 
+        alt="New York" style="width:100%" class="w3-hover-opacity"> -->
 
       <div class="w3-container w3-amber">
 
